--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ body {
 .container svg:nth-of-type(2){
      position: fixed;
      left: -18%;
-     top: 85%;
+     top: 92%;
      
  }
   button{
@@ -62,6 +62,7 @@ body {
     border-bottom: 1px solid #DBDEF0;
 
 }
+
 .ques{
     font-weight: 700;
     font-size: 1.5rem;
@@ -124,4 +125,11 @@ body {
 }
 .flex{
     display: flex !important;
+}
+.remove{
+    opacity: 0;
+}
+.top{
+    margin-top: -95dvh;
+    transition: 0.5s;
 }
